<resources>
    <string name="app_name">MyStudent</string>
    <string name="app_logo">App logo</string>
    <string name="my_student">My Student</string>
    <string name="login">Login</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="s_s_high_school">S.S high School</string>
    <string name="todo">TODO</string>
    <string name="ruddarm_maurya">Ruddarm Maurya</string>
    <string name="stndproflipic">StndProflipic</string>
    <string name="title_activity_bus_tack_map">BusTackMap</string>
    <string name="profile">Profile</string>
    <string name="bus_track">Bus Track</string>
    <string name="title_activity_buslocationactivity">buslocationactivity</string>
    <string name="title_activity_stdbusmap">stdbusmap</string>
    <string name="username">Username</string>
    <string name="class2">class</string>
    <string name="batch">2022–20025</string>
    <string name="usernamefeild">ruddarm123</string>
    <string name="classfeild">BCA SY</string>
    <string name="general_detials">General Detials</string>
    <string name="personal_details">Personal Details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="dobfeild">24/10/2002</string>
    <string name="genderfeild">Male</string>
    <string name="blodgrupfeild">B+</string>
    <string name="parentnamelabel">Name</string>
    <string name="father">Father</string>
    <string name="emailfeild">rammaheshmourya@gmail.com</string>
    <string name="buslogdesc">Buslog</string>
    <string name="callactionbtn">callactionbtn</string>
    <string name="phncallbtn">phncallbtn</string>
    <string name="title_activity_driverlogin">driverlogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_driver_mapact">driverMapact</string>
</resources>