<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FB6B6"
    tools:context=".AdminHome">

    <LinearLayout
        android:id="@+id/HeadLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#225C6E"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="#271F1F"
        android:outlineSpotShadowColor="#3C3030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/SclName"
            android:layout_width="293dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:fontFamily="@font/trochut_bold"
            android:paddingStart="15dp"
            android:text="@string/s_s_high_school"
            android:textAlignment="viewStart"
            android:textColor="#FEFEFE"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry,TextSizeCheck" />

        <ImageView
            android:id="@+id/notficationicon"
            android:layout_width="15dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ringing" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/DetailBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/BottomNavLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeadLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/InnerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ScrolInnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="#000000"
                android:outlineSpotShadowColor="#000000"
                android:visibility="visible">


                <FrameLayout
                    android:id="@+id/ProfleFrame"
                    android:layout_width="match_parent"
                    android:layout_height="181dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <View
                        android:id="@+id/PrfileBackClr"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:background="#225C6E" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:outlineAmbientShadowColor="#000000"
                        android:outlineSpotShadowColor="#0B0B0B">


                        <ImageView
                            android:id="@+id/profileimg"
                            android:layout_width="204dp"
                            android:layout_height="115dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/stndproflipic"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/teacher" />

                        <TextView
                            android:id="@+id/StudentName"
                            android:layout_width="367dp"
                            android:layout_height="31dp"
                            android:fontFamily="@font/alegreya_sans_sc_bold"
                            android:text="Prof. Ohinam"
                            android:textAlignment="center"
                            android:textSize="26sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/profileimg"
                            app:layout_constraintVertical_bias="0.2"
                            tools:ignore="TextSizeCheck" />

                        <View
                            android:id="@+id/ProfileDivder"
                            android:layout_width="416dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/StudentName" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/DetailConstrainlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/prsnldetailsview"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:fontFamily="@font/alegreya_sans_sc_bold"
                    android:paddingStart="10dp"
                    android:text="@string/personal_details"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/prsnldetaillayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GenralDetailsLayout" />

                <TextView
                    android:id="@+id/generaldetailsview"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/alegreya_sans_sc_bold"
                    android:paddingStart="10dp"
                    android:text="@string/general_detials"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/GenralDetailsLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/prsnldetaillayout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:background="#FFFFFF"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GenralDetailsLayout">

                    <LinearLayout
                        android:layout_width="208dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/doblabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/date_of_birth"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/genderlabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/gender"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/bloodgruplabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/blood_group"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        tools:ignore="TextSizeCheck">

                        <TextView
                            android:id="@+id/dobFeild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/dobfeild"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/genderfeild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"


                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/genderfeild"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/bloodgrupfeild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/blodgrupfeild"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GenralDetailsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="36dp"
                    android:background="#FFFFFF"
                    android:orientation="horizontal"
                    android:outlineSpotShadowColor="#00FFFFFF"
                    android:paddingStart="25dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="208dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/UsernameLebel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/username"
                            android:textAlignment="textStart"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/ClassLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="Designation"
                            android:textAlignment="textStart"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/batchlabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="Joining Year"
                            android:textAlignment="textStart"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/UsernameFeild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/usernamefeild"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/classfeild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/classfeild"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/batchfeild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/batch"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddStuentFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:contentDescription="@string/phncallbtn"
        android:padding="0dp"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_add"
        app:backgroundTint="#0DD182"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetailBox"
        app:layout_constraintVertical_bias="0.705"
        app:maxImageSize="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>